--- a/cocowow/podinfo/zarf.yaml
+++ b/cocowow/podinfo/zarf.yaml
@@ -17,3 +17,10 @@ components:
           - values.yaml
     images:
       - "ghcr.io/stefanprodan/podinfo:6.3.5"
+    actions:
+      onDeploy:
+        after:
+          - cmd: ./zarf tools kubectl patch ns podinfo  --type=merge -p '{"metadata":{"labels":{"istio-injection":"enabled"}}}'
+            description: "Add istio-injection: enabled label to the podinfo namespace"
+          - cmd: ./zarf tools kubectl patch deployment podinfo -n podinfo --type=merge -p '{"spec":{"template":{"metadata":{"labels":{"protect":"keycloak"}}}}}'
+            description: "Add protect: keycloak label to the podinfo application"
