--- a/.github/workflows/pipeline.publish.yaml
+++ b/.github/workflows/pipeline.publish.yaml
@@ -1,7 +1,5 @@
 name: Publish Dubbd
 
-
-# Will remove before merge and make it only tags
 on:
   push:
     tags:
@@ -12,19 +10,12 @@ permissions:
   packages: write
 
 jobs:
-  eksctl:
+  publish-packages:
     runs-on: ubuntu-latest
   
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
 
       - name: Install Zarf
         uses: defenseunicorns/setup-zarf@main
@@ -39,6 +30,7 @@ jobs:
           registry: registry1.dso.mil
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
+
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
@@ -50,19 +42,18 @@ jobs:
         run: zarf package create --confirm
         working-directory: defense-unicorns-distro
         timeout-minutes: 60
-      
-      # - name: Publish DUBBD
-      #   run: zarf package publish zarf-package-big-bang-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages
-      #   working-directory: defense-unicorns-distro
-      #   timeout-minutes: 60
 
       - name: Create DUBBD-AWS
         run: zarf package create --confirm
         working-directory: aws
         timeout-minutes: 60
       
+      - name: Publish DUBBD
+        run: zarf package publish zarf-package-big-bang-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages
+        working-directory: defense-unicorns-distro
+        timeout-minutes: 60
+
       - name: Publish DUBBD-AWS
         run: zarf package publish zarf-package-*.tar.zst oci://ghcr.io/defenseunicorns/packages
         working-directory: aws
         timeout-minutes: 60
-
