--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -3,7 +3,7 @@ kind: ZarfPackageConfig
 metadata:
   name: big-bang-distro-aws
   description: "Defense Unicorns Big Bang Distro"
-  version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
+  version: 0.0.1
   url: https://p1.dso.mil/products/big-bang
   image: https://p1.dso.mil/img/Big_Bang_Color_Logo_White_text.de14c793.webp
   # Big Bang / Iron Bank are only amd64
@@ -12,9 +12,6 @@ metadata:
   source: https://github.com/defenseunicorns/zarf-package-big-bang
   documentation: https://github.com/defenseunicorns/zarf-package-big-bang
   vendor: Defense Unicorns
-
-
-
 
 variables:
 - name: TERRAFORM_VERSION
@@ -121,4 +118,3 @@ components:
         version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
         valuesFiles:
         - values/aws-loki.yaml
-      
