--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -49,25 +49,6 @@ jobs:
         id: oidc
         run: echo oidc=$(aws eks describe-cluster --name aws-${GITHUB_SHA:0:7} --query "cluster.identity.oidc" --output text | cut -d '/' -f 5) >> $GITHUB_OUTPUT
 
-      - name: Create KMS Key to be replaced by UDS IaC module later
-        working-directory: .github/workflows/kms
-        id: create-kms
-        run: |
-          terraform init
-          terraform apply -auto-approve --var kms_key_alias=${GITHUB_SHA:0:7}
-
-      - name: get KMS key
-        working-directory: .github/workflows/kms
-        id: get
-        run: echo "kms_key_arn=$(terraform output -raw kms_key_arn)" >> $GITHUB_OUTPUT
-      - name: debug
-        run: echo ${{ steps.get.outputs.kms_key_arn }} ${{ env.OIDC }} env $KMS
-        env:
-          OIDC: $${{steps.get-kms.outputs.stdout}}
-      - name: Show Cluster
-        run: |
-          kubectl get nodes
-
       - name: Zarf init
         run: |
           zarf init -a amd64 --components=git-server --confirm
@@ -79,7 +60,7 @@ jobs:
 
 
       - name: Deploy DUBBD-AWS
-        run: zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=big-bang-${GITHUB_SHA:0:7} --set eks_oidc_provider_arn=arn:aws:iam::248783118822:oidc-provider/oidc.eks.us-west-2.amazonaws.com/id/${{ steps.oidc.outputs.oidc }}
+        run: zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true  --set name=big-bang-${GITHUB_SHA:0:7} --set eks_oidc_provider_arn=arn:aws:iam::248783118822:oidc-provider/oidc.eks.us-west-2.amazonaws.com/id/${{ steps.oidc.outputs.oidc }}
         working-directory: aws
         timeout-minutes: 60
 
@@ -94,12 +75,4 @@ jobs:
         run: |
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
-
-
-      - name: Remove KMS Key to be replaced by UDS IaC module later
-        if: always()
-        working-directory: .github/workflows/kms
-        run: 
-        # eventually have zarf deploy   \
-          terraform destroy -auto-approve
 
