--- a/.github/workflows/pipeline.publish.yaml
+++ b/.github/workflows/pipeline.publish.yaml
@@ -3,7 +3,7 @@ name: Publish DUBBD Packages
 on:
   push:
     tags:
-      - "*"  
+      - "*"
 
 permissions:
   contents: read
@@ -13,8 +13,6 @@ jobs:
   publish-packages:
     env:
       OCI_URL: oci://ghcr.io/defenseunicorns/uds
-      PACKAGE_PREFIX: zarf-package
-      PACKAGE_ARCH: amd64
 
     runs-on: ubuntu-latest
   
@@ -57,18 +55,10 @@ jobs:
         working-directory: defense-unicorns-distro
         timeout-minutes: 60
         run: |
-          PACKAGE_NAME="$(yq '.metadata.name' zarf.y*ml)"
-
-          PACKAGE_VERSION="$(yq '.metadata.version' zarf.y*ml)"
-
-          zarf package publish "$PACKAGE_PREFIX-$PACKAGE_NAME-$PACKAGE_ARCH-$PACKAGE_VERSION" "$OCI_URL"
+          zarf package publish *.zst "$OCI_URL"
 
       - name: Publish DUBBD-AWS Package
         working-directory: aws
         timeout-minutes: 60
         run: |
-          PACKAGE_NAME="$(yq '.metadata.name' zarf.y*ml)"
-
-          PACKAGE_VERSION="$(yq '.metadata.version' zarf.y*ml)"
-
-          zarf package publish "$PACKAGE_PREFIX-$PACKAGE_NAME-$PACKAGE_ARCH-$PACKAGE_VERSION" "$OCI_URL"
+          zarf package publish *.zst "$OCI_URL"
