--- a/defense-unicorns-distro/zarf-config.yaml
+++ b/defense-unicorns-distro/zarf-config.yaml
@@ -1,9 +1,10 @@
 package:
   create: 
-    max_package_size: "1000000000"
+    max_package_size: 1000000000
     set:
       # renovate: datasource=gitlab-tags depName=big-bang/bigbang versioning=semver registryUrl=https://repo1.dso.mil
-      bigbang_version: "2.1.0"
+      bigbang_version: 2.1.0
+      package_version: 0.0.1
   deploy:
     set:
       domain: bigbang.dev
