--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -3,7 +3,7 @@ kind: ZarfPackageConfig
 metadata:
   name: big-bang-distro-aws
   description: "Defense Unicorns Big Bang Distro"
-  version: 0.0.1
+  version: "###ZARF_PKG_VAR_PACKAGE_VERSION###"
   url: https://p1.dso.mil/products/big-bang
   image: https://p1.dso.mil/img/Big_Bang_Color_Logo_White_text.de14c793.webp
   # Big Bang / Iron Bank are only amd64
