Update all zarf.yaml files to latest syntax
Signed-off-by: Micah Nagel <micah.nagel@defenseunicorns.com>

--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -82,7 +82,8 @@ components:
       onDeploy:
         before:
         - cmd: "./zarf tools kubectl version --short || true"
-          setVariable: OUTPUT
+          setVariables:
+            - name: OUTPUT
         after:
         - cmd: "./preflight.sh"
     files:
@@ -151,4 +152,3 @@ components:
         - ../values/monitoring.yaml
         - ../values/neuvector.yaml
         - ../values/tempo.yaml
- 
