--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -37,11 +37,11 @@ jobs:
           password: ${{ secrets.REGISTRY1_PASSWORD }}
           
       - name: Package EKSCTL 
-        run: zarf package create --set cluster_name=big-bang-${GITHUB_SHA:0:7} --confirm
+        run: zarf package create --confirm
         working-directory: .github/workflows/eks
 
       - name: Create EKS cluster and Zarf Init
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm 
+        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=big-bang-${GITHUB_SHA:0:7}
         working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
          
@@ -83,7 +83,9 @@ jobs:
 
       - name: Teardown EKS cluster
         if: always()
-        run: zarf package remove zarf-package-*.tar.zst  --confirm
+        # can't do a zarf package remove since there's no kubernetes cluster.
+        run: |
+          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
 
 
