--- a/.github/workflows/pipeline.dubbd.yaml
+++ b/.github/workflows/pipeline.dubbd.yaml
@@ -35,11 +35,11 @@ jobs:
           password: ${{ secrets.REGISTRY1_PASSWORD }}
     
       - name: Package EKSCTL 
-        run: zarf package create --set cluster_name=${GITHUB_SHA:0:7} --confirm
+        run: zarf package create --confirm
         working-directory: .github/workflows/eks
 
       - name: Create EKS cluster
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm 
+        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${GITHUB_SHA:0:7}
         working-directory: .github/workflows/eks
         # eventually have zarf deploy   \
       - name: Show Cluster
@@ -67,6 +67,8 @@ jobs:
 
       - name: Teardown EKS cluster
         if: always()
-        run: zarf package remove zarf-package-*.tar.zst --confirm
+        # can't do a zarf package remove since there's no kubernetes cluster.
+        run: |
+          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
 
