--- a/cocowow-aws/zarf.yaml
+++ b/cocowow-aws/zarf.yaml
@@ -1,16 +1,124 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/defenseunicorns/zarf/main/zarf.schema.json
 kind: ZarfPackageConfig
 metadata:
-  name: cocowow
-  description: "CoCoWoW"
-  version: "###ZARF_PKG_TMPL_BIGBANG_VERSION###"
+  name: big-bang-distro-aws
+  description: "Defense Unicorns Big Bang Distro"
+  version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
   url: https://p1.dso.mil/products/big-bang
   image: https://p1.dso.mil/img/Big_Bang_Color_Logo_White_text.de14c793.webp
   # Big Bang / Iron Bank are only amd64
   architecture: amd64
+  authors: "@runyontr"
+  source: https://github.com/defenseunicorns/zarf-package-big-bang
+  documentation: https://github.com/defenseunicorns/zarf-package-big-bang
+  vendor: Defense Unicorns
+
+variables:
+- name: TERRAFORM_VERSION
+- name: TERRAFORM_PROVIDER_AWS_VERSION
+
+- name: LOKI_KMS_KEY_ALIAS
+  default: big-bang-loki
+
+- name: LOKI_KMS_KEY_ARN
+  description: "The KMS Key Arn for encrypting and decrypting data in loki"
+  default: ""
+
+- name: LOKI_FORCE_DESTROY
+  description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data"
+  default: "false"
 
 components:
+  - name: download-terraform
+    required: true
+    actions:
+      onDeploy:
+        after:
+          - cmd: rm -f run/loki/terraform || true
+            description: Clean up previous install since archiver doesn't overwrite the output
+          - cmd: "./extract-terraform.sh ###ZARF_PKG_VAR_TERRAFORM_VERSION### ###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###"
+          # - cmd: rm -rf tmp
+    files:
+      - source: extract.sh
+        target: extract-terraform.sh
+        executable: true
+      # terraform binary into zarf package
+      - source: https://releases.hashicorp.com/terraform/###ZARF_PKG_VAR_TERRAFORM_VERSION###/terraform_###ZARF_PKG_VAR_TERRAFORM_VERSION###_darwin_arm64.zip
+        target: tmp/terraform_###ZARF_PKG_VAR_TERRAFORM_VERSION###_darwin_arm64.zip
+      - source: https://releases.hashicorp.com/terraform/###ZARF_PKG_VAR_TERRAFORM_VERSION###/terraform_###ZARF_PKG_VAR_TERRAFORM_VERSION###_darwin_amd64.zip
+        target: tmp/terraform_###ZARF_PKG_VAR_TERRAFORM_VERSION###_darwin_amd64.zip
+      - source: https://releases.hashicorp.com/terraform/###ZARF_PKG_VAR_TERRAFORM_VERSION###/terraform_###ZARF_PKG_VAR_TERRAFORM_VERSION###_linux_amd64.zip
+        target: tmp/terraform_###ZARF_PKG_VAR_TERRAFORM_VERSION###_linux_amd64.zip
+      - source: https://releases.hashicorp.com/terraform-provider-aws/###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###/terraform-provider-aws_###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###_darwin_arm64.zip
+        target: tmp/terraform-provider-aws_###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###_darwin_arm64.zip
+      - source: https://releases.hashicorp.com/terraform-provider-aws/###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###/terraform-provider-aws_###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###_darwin_amd64.zip
+        target: tmp/terraform-provider-aws_###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###_darwin_amd64.zip
+      - source: https://releases.hashicorp.com/terraform-provider-aws/###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###/terraform-provider-aws_###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###_linux_amd64.zip
+        target: tmp/terraform-provider-aws_###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###_linux_amd64.zip
+      - source: https://releases.hashicorp.com/terraform-provider-aws/###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###/terraform-provider-aws_###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
+        target: tmp/terraform-provider-aws_###ZARF_PKG_VAR_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
+ 
+  - name: loki-module
+    required: true
+    actions:
+      onCreate:
+        before:
+          - cmd: "terraform init -upgrade"
+            dir: loki
+        after:
+          - cmd: "test -d ./run/ && chmod -R ugo+rwx ./run/ || echo $?"
+    files:
+    # terraform code
+    - source: loki/.terraform
+      target: run/loki/.terraform
+    - source: loki/main.tf
+      target: run/loki/main.tf
+    - source: loki/terraform.tfvars
+      target: run/loki/terraform.tfvars
+    - source: loki/.terraform.lock.hcl
+      target: run/loki/.terraform.lock.hcl
+  - name: execute-terraform
+    required: true
+    actions:
+      onDeploy:
+        before:
+          - cmd: "terraform plan"
+            dir: run/loki
+          - cmd: sleep 15 #time to review
+          - cmd: "terraform apply -auto-approve"
+            dir: run/loki
+      onRemove:
+        before:
+          - cmd: "terraform destroy -auto-approve"
+            dir: run/loki
+  - name: outputs
+    required: true
+    actions:
+      onDeploy:
+        after:
+          - cmd: "terraform output -raw s3_bucket"
+            dir: run/loki
+            setVariable: LOKI_S3_BUCKET
+          - cmd: "terraform output -raw aws_region"
+            dir: run/loki
+            setVariable: LOKI_S3_AWS_REGION
+          - cmd: "terraform output -raw irsa_role"
+            dir: run/loki
+            setVariable: LOKI_S3_ROLE_ARN
   - name: load-certs
+    required: true
+    import:
+      path: ../defense-unicorns-distro
+  - name: bigbang
+    required: true
+    import:
+      path: ../defense-unicorns-distro
+    extensions:
+      bigbang:
+        version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
+        valuesFiles:
+        - values/aws-loki.yaml
+  - name: load-certs-keycloak
     required: true
     import:
       path: ../defense-unicorns-distro
@@ -34,9 +142,6 @@ components:
           - name: KEYCLOAK_KEY
   - name: cocowow
     required: true
-    import:
-      path: ../aws
-      name: bigbang
     images:
       - registry1.dso.mil/ironbank/big-bang/p1-keycloak-plugin:3.2.0
     extensions:
