Add package version variable to dubbd and dubbd-aws packages
Set package version variale at package create time in publish pipeline

--- a/.github/workflows/pipeline.publish.yaml
+++ b/.github/workflows/pipeline.publish.yaml
@@ -42,12 +42,12 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
     
       - name: Create DUBBD Package
-        run: zarf package create --confirm
+        run: zarf package create --confirm --set package_version=$GITHUB_REF_NAME
         working-directory: defense-unicorns-distro
         timeout-minutes: 60
 
       - name: Create DUBBD-AWS Package
-        run: zarf package create --confirm
+        run: zarf package create --confirm --set package_version=$GITHUB_REF_NAME
         working-directory: aws
         timeout-minutes: 60
       
