--- a/cocowow-aws/zarf-config.yaml
+++ b/cocowow-aws/zarf-config.yaml
@@ -4,7 +4,8 @@ package:
     set:
       # renovate: datasource=gitlab-tags depName=big-bang/bigbang versioning=semver registryUrl=https://repo1.dso.mil
       bigbang_version: "2.1.0"
-      domain: bigbang.dev
+      terraform_version: "1.4.2"
+      terraform_provider_aws_version: 4.59.0
   deploy:
     set:
       keycloak_key_file: bigbang.dev.key
