Troubleshooting pipeline.aws
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Set eks_cluster_name
         run: |
           echo "eks_cluster_name=big-bang-${GITHUB_SHA:0:7}" >> $GITHUB_ENV
-          echo $eks_cluster_name
+          echo "$eks_cluster_name"
 
       - name: Package EKSCTL 
         run: zarf package create --confirm
