--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -38,7 +38,8 @@ jobs:
           
       - name: Set eks_cluster_name
         run: |
-          echo "eks_cluster_name=big-bang-${GITHUB_SHA:0:7}" >> $GITHUB_ENV
+          #echo "eks_cluster_name=big-bang-${GITHUB_SHA:0:7}" >> $GITHUB_ENV
+          echo "eks_cluster_name=big-BOY-bang" >> $GITHUB_ENV
           echo "$eks_cluster_name"
 
       - name: Package EKSCTL 
