--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -50,7 +50,7 @@ jobs:
         working-directory: .github/workflows/eks
 
       - name: Create EKS cluster and Zarf Init
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=$eks_cluster_name
+        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=$EKS_CLUSTER_NAME
         working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
          
@@ -83,7 +83,7 @@ jobs:
       - name: Deploy DUBBD-AWS
         run: |
           echo big-bang-${GITHUB_SHA:0:7}
-          zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=$eks_cluster_name
+          zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=$EKS_CLUSTER_NAME
         working-directory: aws
         timeout-minutes: 60
 
