Troubleshooting pipeline.aws
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -37,13 +37,14 @@ jobs:
           password: ${{ secrets.REGISTRY1_PASSWORD }}
           
       - name: Set eks_cluster_name
+        id: get_cluster_name
         env:
           #EKS_CLUSTER_NAME: big-bang-${GITHUB_SHA:0:7}
           SHA: ${{ github.sha }}
         run: |
-          echo "eks_cluster_name=big-bang-${SHA:0:7}" >> $GITHUB_ENV
+          echo "eks_cluster_name=big-bang-${SHA:0:7}" >> $GITHUB_OUTPUT
           #EKS_CLUSTER_NAME: big-bang-${{ github.sha }}
-          echo "$EKS_CLUSTER_NAME"
+          echo "$eks_cluster_name"
           echo "$GITHUB_CONTEXT"
 
       - name: Package EKSCTL 
@@ -51,7 +52,7 @@ jobs:
         working-directory: .github/workflows/eks
 
       - name: Create EKS cluster and Zarf Init
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=$EKS_CLUSTER_NAME
+        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
         working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
          
@@ -84,7 +85,7 @@ jobs:
       - name: Deploy DUBBD-AWS
         run: |
           echo big-bang-${GITHUB_SHA:0:7}
-          zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=$EKS_CLUSTER_NAME
+          zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
 
         working-directory: aws
         timeout-minutes: 60
