--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -36,23 +36,32 @@ jobs:
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
           
-      - name: Set eks_cluster_name
-        id: get_cluster_name
-        env:
-          #EKS_CLUSTER_NAME: big-bang-${GITHUB_SHA:0:7}
-          SHA: ${{ github.sha }}
-        run: |
-          echo "eks_cluster_name=big-bang-${SHA:0:7}" >> $GITHUB_OUTPUT
-          #EKS_CLUSTER_NAME: big-bang-${{ github.sha }}
-          echo "$eks_cluster_name"
-          echo "$GITHUB_CONTEXT"
+      - name: Get short SHA
+        Id: get-short-sha
+        Run: |
+          id=$(echo ${{github.sha}} | cut -c 1-7)
+          echo "short_sha=${id}" >> $GITHUB_OUTPUT
+
+#     - name: Set eks_cluster_name
+#       id: get_cluster_name
+#       env:
+#         #EKS_CLUSTER_NAME: big-bang-${GITHUB_SHA:0:7}
+#         SHA: ${{ github.sha }}
+#       run: |
+#         echo "eks_cluster_name=big-bang-${SHA:0:7}" >> $GITHUB_OUTPUT
+#         #EKS_CLUSTER_NAME: big-bang-${{ github.sha }}
+#         echo "$eks_cluster_name"
+#         echo "$GITHUB_CONTEXT"
+
 
       - name: Package EKSCTL 
         run: zarf package create --confirm
         working-directory: .github/workflows/eks
 
       - name: Create EKS cluster and Zarf Init
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+        run: |
+          echo big-bang-${{ steps.get-short-sha.outputs.id}}
+          zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=big-bang-${{ steps.get-short-sha.outputs.id}}
         working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
          
@@ -61,7 +70,7 @@ jobs:
         id: create-kms
         run: |
           terraform init
-          terraform apply -auto-approve --var kms_key_alias=${GITHUB_SHA:0:7}
+          terraform apply -auto-approve --var kms_key_alias=${{ steps.get-short-sha.outputs.id}}
 
       - name: get KMS key
         working-directory: .github/workflows/kms
@@ -84,8 +93,8 @@ jobs:
 
       - name: Deploy DUBBD-AWS
         run: |
-          echo big-bang-${GITHUB_SHA:0:7}
-          zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+          echo big-bang-${{ steps.get-short-sha.outputs.id}}
+          zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=big-bang-${{ steps.get-short-sha.outputs.id}}
 
         working-directory: aws
         timeout-minutes: 60
