--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -39,12 +39,10 @@ jobs:
       - name: Set eks_cluster_name
         id: get_cluster_name
         env:
-          #EKS_CLUSTER_NAME: big-bang-${GITHUB_SHA:0:7}
           SHA: ${{ github.sha }}
         run: |
           echo "eks_cluster_name=big-bang-${SHA:0:7}" >> $GITHUB_OUTPUT
-          echo "$eks_cluster_name"
-          echo "$GITHUB_CONTEXT"
+          echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
 
 
       - name: Package EKSCTL 
@@ -52,7 +50,9 @@ jobs:
         working-directory: .github/workflows/eks
 
       - name: Create EKS cluster and Zarf Init
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+        run: |
+          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+          zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
         working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
          
@@ -61,7 +61,7 @@ jobs:
         id: create-kms
         run: |
           terraform init
-          terraform apply -auto-approve --var kms_key_alias=${GITHUB_SHA:0:7}
+          terraform apply -auto-approve --var kms_key_alias=${{ steps.get_cluster_name.outputs.short_sha }}
 
       - name: get KMS key
         working-directory: .github/workflows/kms
@@ -71,6 +71,7 @@ jobs:
       - name: Show Cluster
         run: |
           kubectl get nodes
+          kubectl config get-contexts
 
       - name: Zarf init
         run: |
@@ -84,7 +85,7 @@ jobs:
 
       - name: Deploy DUBBD-AWS
         run: |
-          echo big-bang-${GITHUB_SHA:0:7}
+          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
           zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
 
         working-directory: aws
