--- a/.github/workflows/pipeline.dubbd.yaml
+++ b/.github/workflows/pipeline.dubbd.yaml
@@ -38,8 +38,7 @@ jobs:
          id: get_cluster_name
          env:
            SHA: ${{ github.sha }}
-         run: |
-           echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
+         run: echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
    
       - name: Package EKSCTL 
         run: zarf package create --confirm
