--- a/.github/workflows/pipeline.dubbd.yaml
+++ b/.github/workflows/pipeline.dubbd.yaml
@@ -33,13 +33,14 @@ jobs:
           registry: registry1.dso.mil
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
+    
+      - name: Set eks_cluster_name
+        id: get_cluster_name
+        env:
+          SHA: ${{ github.sha }}
+        run: |
+          echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
 
-       - name: Set eks_cluster_name
-         id: get_cluster_name
-         env:
-           SHA: ${{ github.sha }}
-         run: echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
-   
       - name: Package EKSCTL 
         run: zarf package create --confirm
         working-directory: .github/workflows/eks
