--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -33,7 +33,12 @@ jobs:
           registry: registry1.dso.mil
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
-          
+      
+      - name: Create DUBBD-AWS
+        run: zarf package create --confirm --set package_version=$GITHUB_REF_NAME
+        working-directory: aws
+        timeout-minutes: 60
+
       - name: Package EKSCTL 
         run: zarf package create --confirm
         working-directory: .github/workflows/eks
@@ -70,11 +75,6 @@ jobs:
       - name: Zarf init
         run: |
           zarf init -a amd64 --components=git-server --confirm
-
-      - name: Create DUBBD-AWS
-        run: zarf package create --confirm
-        working-directory: aws
-        timeout-minutes: 60
 
       - name: Deploy DUBBD-AWS
         run: zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=big-bang-${GITHUB_SHA:0:7} --set eks_oidc_provider_arn=arn:aws:iam::248783118822:oidc-provider/oidc.eks.us-west-2.amazonaws.com/id/${{ steps.oidc.outputs.oidc }}
